🎨 style(package.json): add scripts for frontend 📝 docs(package.json): add author field The package.json file has been updated to include new scripts for the frontend. The new scripts are install-dependencies, start:front, build:front, start, and build. These scripts allow for easier management of the frontend application. The author field has also been updated to include the name of the author.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "nongvl",
   "main": "index.js",
   "scripts": {
+    "install-dependencies": "npm i & cd frontend && npm install",
+    "start:front": "cd frontend && npm start",
+    "build:front": "cd frontend && npm run build",
+    "start": "npm run start:front",
+    "build": "npm run build:front",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Syuq",
   "license": "ISC"
 }
