--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jira-angular-clone-backend",
+  "name": "angular-clone-backend",
   "version": "1.0.0",
   "description": "",
   "author": "",
